--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ h1 {
 
 .row .text {
     flex: 1 1 auto;
+    
 }
 
 .row .label {
@@ -125,7 +126,7 @@ p {
 }
 
 .lds-ring {
-display: block;
+display: inline-block;
 position: relative;
 width: 64px;
 height: 64px;
@@ -158,4 +159,21 @@ animation-delay: -0.15s;
 100% {
     transform: rotate(360deg);
 }
+}
+
+#loader{
+    position: fixed; /* Sit on top of the page content */
+    display: block; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    /* margin-right: 49%;
+    margin-top: 49%; */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255,255,255); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+    text-align: center;
 }
