--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <script src="js/tfjs.js"></script>
-    <script src="js/toxicity.js"></script>
+    <script src="{{ url_for('static', filename='js/tfjs.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/toxicity.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
 </head>
 
@@ -49,6 +49,6 @@
     </div>
 
 </body>
-<script src="index.js"></script>
+
 
 </html>
