--- a/static/css/main.css
+++ b/static/css/main.css
@@ -176,4 +176,5 @@ animation-delay: -0.15s;
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
     cursor: pointer; /* Add a pointer on hover */
     text-align: center;
+    align-content: center;
 }
