--- a/templates/index.html
+++ b/templates/index.html
@@ -27,15 +27,21 @@
         </div>
         <center>
             <div id="loader">
-                <div class="lds-ring">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-                <br>
-                <br>
-                <br>Please wait while the model loads.
+                <center>
+                    <div class="lds-ring">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+
+                    Please wait while the model loads.
+                </center>
             </div>
         </center>
         <div id="table-wrapper"></div>
